--- a/style.css
+++ b/style.css
@@ -1,1 +1,75 @@
 /*  Add your styling here */
+
+@media (min-width: 992px) 
+{
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm
+     {
+        max-width: 960px;
+        display: flex;
+        flex-direction: row-reverse;
+        
+    }
+
+
+   
+
+
+    .h1-p {
+        display: flex;
+        flex-direction: column;
+        height: 2em;
+        width: auto;
+        text-align:end ;
+    }
+
+}
+
+
+
+body {
+    font-family: 'Nunito', sans-serif;
+    background-color: burlywood;
+}
+
+
+
+.navbar-light .navbar-toggler {
+    flex-direction: row-reverse;
+}
+
+.nav-link {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+
+.header .nav h2 {
+    flex-direction: row;
+
+}
+
+.navbar {
+    justify-content: flex-end;
+}
+
+.footer .div-footer .join-ul li{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+.footer .div-footer .join-ul{
+    display: flex;
+    
+}
+}
+.footer .div-footer {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {margin: 20px;}
+
+h2 {margin: 10px;}
